--- a/Метод_Хука_Дживса.ipynb
+++ b/Метод_Хука_Дживса.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Метод_Хука-Дживса.ipynb",
+      "name": "Метод_Хука_Дживса.ipynb",
       "provenance": []
     },
     "kernelspec": {
@@ -17,13 +17,45 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "source": [
+        "machineAcc = 0.000000001\n",
+        "# Исследующий поиск\n",
+        "def utilSearch(b, h, f):\n",
+        "    bres = b[:]\n",
+        "    fb = f(bres)\n",
+        "    for i in range(0,len(bres)):\n",
+        "        bn = bres\n",
+        "        bn[i] = bn[i] + h[i]     \n",
+        "        fc = f(bn)\n",
+        "        if (fc + machineAcc<fb):\n",
+        "            bres = bn\n",
+        "            fb = fc\n",
+        "        else:\n",
+        "            bn[i] = bn[i] - 2*h[i]\n",
+        "            fc = f(bn)\n",
+        "            if (fc + machineAcc < fb):\n",
+        "                bres = bn\n",
+        "                fb = fc\n",
+        "    return bres\n",
+        "Path1 = []\n",
+        "Path2 = []\n",
+        "Path3 = []\n",
+        "Path4 = []"
+      ],
+      "metadata": {
+        "id": "X8FsMQjGJ_3D"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "FNCQRpWoft6O"
       },
       "outputs": [],
       "source": [
-        "# Метод конфигураций Хука-Дживса\n",
         "# Находит минимум многомерной функции\n",
         "def HJ(b1, h, e, f):\n",
         "    z = 0.1\n",
